Use moduleResolution: bundler and module: esnext

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,7 +3,8 @@
     "lib": ["dom", "esnext"],
     "composite": true,
     "rootDir": "src",
-    "module": "node16",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "target": "es2021",
     "sourceMap": true,
     "declaration": true,
