--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,7 +7,8 @@
   "include": ["src/*"],
   "compilerOptions": {
     "checkJs": true,
-    "module": "node16",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "target": "esnext",
     "sourceMap": true,
     "declaration": true,
