--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,21 +2,30 @@
   "references": [{ "path": "../core" }],
   "include": ["src/"],
   "compilerOptions": {
-    "lib": ["dom", "es2022", "esnext"],
-    "composite": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    // base
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "moduleDetection": "force",
+    "isolatedModules": true,
+
+    // strictness
+    "strict": true,
+
+    // transpilation
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "outDir": "dist/",
+    "rootDir": "src/",
+    "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "rootDir": "./src",
-    "strict": true,
+    "composite": true,
     "jsx": "react-jsx",
-    "outDir": "dist",
-    "skipLibCheck": true,
-    "target": "es2021",
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+
+    // runtime
+    "lib": ["dom", "dom.iterable", "es2023"],
+
     "types": ["@testing-library/jest-dom/vitest"],
     "paths": {
       "@markprompt/core": ["../core/src"],
