--- a/packages/docusaurus-theme-search/tsconfig.json
+++ b/packages/docusaurus-theme-search/tsconfig.json
@@ -23,6 +23,7 @@
     "declarationMap": true,
     "composite": true,
     "jsx": "react-jsx",
+    "verbatimModuleSyntax": true,
 
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"],
