--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -22,6 +22,7 @@
     "declarationMap": true,
     "composite": true,
     "jsx": "react-jsx",
+    "verbatimModuleSyntax": true,
 
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"],
