--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -6,23 +6,34 @@
   ],
   "include": ["src/*"],
   "compilerOptions": {
+    // base
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "allowJs": true,
     "checkJs": true,
+
+    // strictness
+    "strict": true,
+
+    // transpilation
     "module": "esnext",
     "moduleResolution": "bundler",
-    "target": "esnext",
+    "outDir": "dist/",
+    "rootDir": "src/",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "incremental": true,
     "emitDeclarationOnly": true,
     "composite": true,
-    "strict": true,
-    "isolatedModules": true,
-    "skipLibCheck": true,
-    "verbatimModuleSyntax": true,
     "jsx": "react-jsx",
-    "outDir": "dist/",
-    "rootDir": "./src",
+    "verbatimModuleSyntax": true,
+
+    // runtime
+    "lib": ["dom", "dom.iterable", "es2023"],
+
     "paths": {
       "react": ["./node_modules/preact/compat"],
       "react-dom": ["./node_modules/preact/compat"],
