--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     "type-fest": "^4.3.1"
   },
   "devDependencies": {
-    "@types/defaults": "^1.0.6"
+    "@types/defaults": "^1.0.6",
+    "msw": "^1.3.0"
   }
 }
