--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,6 +47,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash": "^4.14.199",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "msw": "^1.3.0",
     "vite-tsconfig-paths": "^4.2.2"
   },
   "peerDependencies": {
