--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "keyframes-name-pattern": null,
     "number-max-precision": 7,
     "selector-class-pattern": null,
-    "selector-id-pattern": null
+    "selector-id-pattern": null,
+    "no-descending-specificity": null
   }
 }
