--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,8 +26,10 @@
     "@markprompt/core": "^0.26.3",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-visually-hidden": "^1.0.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "compute-scroll-into-view": "^3.1.0",
     "downshift": "^9.0.4",
@@ -41,6 +43,7 @@
     "react-merge-refs": "^2.1.1",
     "remark-gfm": "^4.0.0",
     "tabbable": "^6.2.0",
+    "tailwind-merge": "^2.2.2",
     "use-sync-external-store": "^1.2.0",
     "zustand": "^4.5.2"
   },
