--- a/examples/with-css-modules/tsconfig.json
+++ b/examples/with-css-modules/tsconfig.json
@@ -8,6 +8,6 @@
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-  },
+    "jsx": "react-jsx"
+  }
 }
