--- a/examples/with-docusaurus/tsconfig.json
+++ b/examples/with-docusaurus/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@site/*": ["./*"],
-    },
-  },
+      "@site/*": ["./*"]
+    }
+  }
 }
