--- a/package.json
+++ b/package.json
@@ -21,28 +21,27 @@
     "version": "changeset version && npm install"
   },
   "dependencies": {
-    "@changesets/changelog-github": "^0.4.8",
-    "@changesets/cli": "^2.26.2",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vitest/coverage-v8": "^1.4.0",
-    "eslint": "8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "@vitest/coverage-v8": "^1.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest-dom": "^5.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^6.2.0",
-    "eslint-plugin-vitest": "^0.4.1",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint-plugin-vitest": "^0.4.0",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "msw": "^2.2.13",
     "npm-run-all": "^4.1.5",
     "path-exists-cli": "^2.0.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-packagejson": "^2.4.5",
+    "prettier": "^3.2.5",
+    "prettier-plugin-packagejson": "^2.5.0",
     "remark-cli": "^11.0.0",
     "remark-frontmatter": "^4.0.1",
     "remark-toc": "^8.0.1",
@@ -50,9 +49,8 @@
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-formatter-github": "^1.0.1",
-    "typescript": "~5.2.2",
-    "unified-prettier": "^2.0.0",
-    "vitest": "^1.4.0"
+    "unified-prettier": "^2.0.1",
+    "vitest": "^1.5.0"
   },
   "overrides": {
     "react": "^18.2.0",
@@ -61,6 +59,10 @@
     "@types/react-dom": "18.2.18"
   },
   "devDependencies": {
-    "@vitest/ui": "^1.4.0"
+    "@eslint/js": "^9.0.0",
+    "@vitest/ui": "^1.5.0",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0"
   }
 }
