--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -21,8 +21,8 @@
     "composite": true,
 
     // runtime
-    "lib": ["dom", "dom.iterable", "es2023"],
+    "lib": ["dom", "dom.iterable", "es2023"]
   },
   "include": ["src/*"],
-  "exclude": ["src/*.test.ts"],
+  "exclude": ["src/*.test.ts"]
 }
