--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -28,7 +28,7 @@
     "lib": ["dom", "dom.iterable", "es2023"],
 
     "paths": {
-      "@markprompt/core": ["../core/src"],
-    },
-  },
+      "@markprompt/core": ["../core/src"]
+    }
+  }
 }
