--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:js": "eslint . --quiet",
     "lint:md": "remark . --frail",
     "lint:ts": "npm run build && rm *.tgz",
-    "prepare": "husky install",
+    "prepare": "husky",
     "publish": "npm run build:packages && changeset publish",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
@@ -35,19 +35,19 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-vitest": "^0.4.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "msw": "^2.2.13",
     "npm-run-all": "^4.1.5",
     "path-exists-cli": "^2.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
-    "remark-cli": "^11.0.0",
-    "remark-frontmatter": "^4.0.1",
-    "remark-toc": "^8.0.1",
-    "remark-validate-links": "^12.1.1",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^34.0.0",
+    "remark-cli": "^12.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-toc": "^9.0.0",
+    "remark-validate-links": "^13.0.1",
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard": "^36.0.0",
     "stylelint-formatter-github": "^1.0.1",
     "unified-prettier": "^2.0.1",
     "vitest": "^1.5.0"
