--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -12,6 +12,8 @@
     // strictness
     "strict": true,
 
+    "types": ["@testing-library/jest-dom"],
+
     // transpilation
     "module": "nodenext",
     "moduleResolution": "nodenext",
