--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "clsx": "^2.1.0",
+    "compute-scroll-into-view": "^3.1.0",
     "downshift": "^9.0.4",
     "emittery": "^1.0.3",
     "immer": "^10.0.4",
@@ -38,6 +39,7 @@
     "react-markdown": "^9.0.1",
     "react-merge-refs": "^2.1.1",
     "remark-gfm": "^4.0.0",
+    "tabbable": "^6.2.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
