--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -27,7 +27,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
-    "cpy-cli": "^5.0.0"
+    "cpy-cli": "^5.0.0",
+    "react": "^18.2.0"
   },
   "peerDependencies": {
     "react": "^18"
