--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.12",
     "@floating-ui/react-dom": "^2.0.8",
-    "@markprompt/core": "workspace:*",
+    "@markprompt/core": "^0.27.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
