--- a/examples/with-docusaurus-swizzled/package.json
+++ b/examples/with-docusaurus-swizzled/package.json
@@ -31,9 +31,9 @@
     "@docusaurus/module-type-aliases": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
     "@docusaurus/theme-search-algolia": "^3.2.1",
-    "@markprompt/css": "*",
-    "@markprompt/docusaurus-theme-search": "*",
-    "@markprompt/react": "*",
+    "@markprompt/css": "workspace:*",
+    "@markprompt/docusaurus-theme-search": "workspace:*",
+    "@markprompt/react": "workspace:*",
     "@mdx-js/react": "^3.0.1",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
