--- a/examples/with-css-modules/package.json
+++ b/examples/with-css-modules/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@markprompt/core": "*",
-    "@markprompt/react": "*",
+    "@markprompt/core": "workspace:*",
+    "@markprompt/react": "workspace:*",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.2",
+    "@types/react-dom": "^18.2",
     "vite": "^5.2.9"
   }
 }
