--- a/examples/with-custom-trigger-react/package.json
+++ b/examples/with-custom-trigger-react/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@markprompt/css": "*",
-    "@markprompt/react": "*",
+    "@markprompt/css": "workspace:*",
+    "@markprompt/react": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.2",
+    "@types/react-dom": "^18.2",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "vite": "^5.2.9"
   }
