--- a/examples/with-docusaurus-algolia/package.json
+++ b/examples/with-docusaurus-algolia/package.json
@@ -30,7 +30,7 @@
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/module-type-aliases": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
-    "@markprompt/docusaurus-theme-search": "*",
+    "@markprompt/docusaurus-theme-search": "workspace:*",
     "@mdx-js/react": "^3.0.1",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
