--- a/examples/with-markprompt-web/package.json
+++ b/examples/with-markprompt-web/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@markprompt/css": "*",
-    "@markprompt/web": "*",
+    "@markprompt/css": "workspace:*",
+    "@markprompt/web": "workspace:*",
     "preact": "^10.20.2",
     "randomuuid": "^1.0.1"
   },
