--- a/examples/with-next/package.json
+++ b/examples/with-next/package.json
@@ -9,8 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@markprompt/css": "*",
-    "@markprompt/react": "*",
+    "@markprompt/css": "workspace:*",
+    "@markprompt/react": "workspace:*",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "classnames": "^2.5.1",
@@ -19,7 +19,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25"
+    "@types/react": "^18.2",
+    "@types/react-dom": "^18.2"
   }
 }
