--- a/examples/with-standalone-ticket-deflection/package.json
+++ b/examples/with-standalone-ticket-deflection/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@markprompt/css": "*",
-    "@markprompt/web": "*"
+    "@markprompt/css": "workspace:*",
+    "@markprompt/web": "workspace:*"
   },
   "devDependencies": {
-    "vite": "^5.2.0"
+    "vite": "^5.2.9"
   }
 }
