--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,8 +28,8 @@
     "prepack": "node scripts/build.js"
   },
   "dependencies": {
-    "@markprompt/core": "0.29.1",
-    "@markprompt/react": "0.47.0"
+    "@markprompt/core": "workspace:*",
+    "@markprompt/react": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2",
