--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "pnpm pack --workspaces",
-    "build:packages": "pnpm build -f core -f docusaurus-theme-search -f react -f web",
+    "build": "turbo run build",
+    "build:packages": "turbo run build --filter core... --filter docusaurus-theme-search... --filter react... --filter web...",
     "postinstall": "manypkg check",
-    "lint": "run-p lint:css lint:format lint:js lint:md lint:ts",
+    "lint": "turbo run lint:css lint:format lint:js lint:md lint:ts",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
     "lint:md": "remark . --frail",
-    "lint:ts": "pnpm build && rm *.tgz",
+    "lint:ts": "pnpm build",
     "prepare": "husky",
     "publish": "pnpm build:packages && changeset publish",
     "test": "vitest run --coverage",
