--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -17,8 +17,8 @@
     "src/theme"
   ],
   "scripts": {
-    "build": "tsc --build --clean && tsc --build",
-    "prepack": "tsc --build --clean && tsc --build"
+    "build": "tsc --build",
+    "prepack": "tsc --build"
   },
   "dependencies": {
     "@docusaurus/types": "^3.2.1",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
+    "@types/react": "^18.2",
     "cpy-cli": "^5.0.0",
     "react": "^18.2.0"
   },
