--- a/packages/docusaurus-theme-search/tsconfig.json
+++ b/packages/docusaurus-theme-search/tsconfig.json
@@ -31,10 +31,6 @@
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"],
 
-    "types": ["@docusaurus/module-type-aliases"],
-    "paths": {
-      "@markprompt/core": ["../core/src"],
-      "@markprompt/react": ["../react/src"]
-    }
+    "types": ["@docusaurus/module-type-aliases"]
   }
 }
