--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -27,10 +27,6 @@
     "verbatimModuleSyntax": true,
 
     // runtime
-    "lib": ["dom", "dom.iterable", "es2023"],
-
-    "paths": {
-      "@markprompt/core": ["../core/src"]
-    }
+    "lib": ["dom", "dom.iterable", "es2023"]
   }
 }
