--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "stylelint": "^16.3.1",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-formatter-github": "^1.0.1",
+    "turbo": "^1.13.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
     "unified-prettier": "^2.0.1",
