--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
   ],
   "pipeline": {
     "build": {
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**", "build/**"],
       "dependsOn": ["^build"]
     },
     "dev": {
@@ -23,6 +23,10 @@
     "//#lint:format": {},
     "//#lint:js": {},
     "//#lint:md": {},
-    "//#lint:ts": {}
+    "//#lint:ts": {},
+    "//#test": {
+      "dependsOn": ["^build"],
+      "outputs": ["coverage/**"]
+    }
   }
 }
