Build packages before testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
           node-version: 20
           cache: pnpm
       - run: pnpm install
+      - run: pnpm build:packages
       - run: pnpm turbo run test
       - uses: codecov/codecov-action@v4
         env:
