--- a/package.json
+++ b/package.json
@@ -6,26 +6,30 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm pack --workspaces",
-    "build:packages": "npm run build -w @markprompt/core -w @markprompt/docusaurus-theme-search -w @markprompt/react -w @markprompt/web",
-    "lint": "run-p lint:css lint:format lint:js lint:md lint:ts",
-    "lint:css": "npx stylelint \"**/*.css\"",
+    "build": "turbo run build",
+    "build:packages": "turbo run build --filter core... --filter docusaurus-theme-search... --filter react... --filter web...",
+    "postinstall": "manypkg check",
+    "lint": "turbo run lint:css lint:format lint:js lint:md lint:ts",
+    "lint:css": "stylelint \"**/*.css\"",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
     "lint:md": "remark . --frail",
-    "lint:ts": "npm run build && rm *.tgz",
+    "lint:ts": "pnpm build:packages",
     "prepare": "husky",
-    "publish": "npm run build:packages && changeset publish",
+    "publish": "pnpm publish -r",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
-    "version": "changeset version && npm install"
+    "version": "changeset version && pnpm install"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@manypkg/cli": "^0.21.4",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vitest/coverage-v8": "^1.5.0",
+    "@vitest/ui": "^1.5.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
@@ -38,8 +42,6 @@
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "msw": "^2.2.13",
-    "npm-run-all": "^4.1.5",
-    "path-exists-cli": "^2.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
     "remark-cli": "^12.0.0",
@@ -49,23 +51,22 @@
     "stylelint": "^16.3.1",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-formatter-github": "^1.0.1",
+    "turbo": "^1.13.3",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0",
     "unified-prettier": "^2.0.1",
     "vitest": "^1.5.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@vitest/ui": "^1.5.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.17.2"
   },
-  "overrides": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18"
+  "packageManager": "pnpm@9.1.3+sha256.7f63001edc077f1cff96cacba901f350796287a2800dfa83fe898f94183e4f5f",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "^18.2",
+      "@types/react-dom": "^18.2",
+      "react": "^18.2",
+      "react-dom": "^18.2"
+    }
   }
 }
