--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:md": "remark . --frail",
     "lint:ts": "pnpm build:packages",
     "prepare": "husky",
-    "publish": "pnpm publish -r",
+    "publish": "pnpm build:packages && changeset publish",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
     "version": "changeset version && pnpm install"
