Lint each package separately

--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "build": "tsc --build",
+    "lint:js": "eslint .",
     "prepack": "tsc --build"
   },
   "dependencies": {
