--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "markprompt",
   "private": true,
+  "type": "module",
   "workspaces": [
     "examples/*",
     "packages/*"
@@ -12,7 +13,7 @@
     "lint": "turbo run lint:css lint:format lint:js lint:md lint:ts",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:format": "prettier --check .",
-    "lint:js": "eslint . --quiet",
+    "lint:js": "eslint . --ignore-pattern \"coverage/\" --ignore-pattern \"examples/\" --ignore-pattern \"packages/\"",
     "lint:md": "remark . --frail",
     "lint:ts": "pnpm build:packages",
     "prepare": "husky",
@@ -25,6 +26,7 @@
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@manypkg/cli": "^0.21.4",
+    "@types/prettier": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vitest/coverage-v8": "^1.5.0",
@@ -33,12 +35,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest-dom": "^5.2.0",
+    "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-vitest": "^0.4.0",
+    "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "msw": "^2.2.13",
