--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "tsc --build",
     "dev": "tsc --build --watch",
+    "lint:js": "eslint .",
     "prepack": "tsc --build"
   },
   "dependencies": {
