--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.build.json --watch",
+    "lint:js": "eslint .",
     "prepack": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
