--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,6 +25,7 @@
     "analyze": "node scripts/analyze.js",
     "build": "node scripts/build.js",
     "dev": "node scripts/dev.js",
+    "lint:js": "eslint .",
     "prepack": "node scripts/build.js"
   },
   "dependencies": {
