Restructure tsconfig setup and add clean script

--- a/examples/with-css-modules/tsconfig.json
+++ b/examples/with-css-modules/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "references": [{ "path": "../../packages/react" }],
+  "references": [{ "path": "../../packages/react/tsconfig.build.json" }],
   "compilerOptions": {
     "target": "es2021",
     "skipLibCheck": true,
