--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -17,9 +17,10 @@
     "src/theme"
   ],
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc --build tsconfig.build.json",
     "lint:js": "eslint .",
-    "prepack": "tsc --build"
+    "lint:ts": "tsc --build",
+    "prepack": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
     "@docusaurus/types": "^3.2.1",
