--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -9,7 +9,6 @@
 
     // strictness
     "strict": true,
-    "types": ["@testing-library/jest-dom"],
 
     // transpilation
     "module": "nodenext",
@@ -21,13 +20,10 @@
     "declaration": true,
     "declarationMap": true,
     "composite": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
 
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"]
   },
   "include": ["src/"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{ "path": "../core/tsconfig.build.json" }]
+  "exclude": ["src/*.test.ts"]
 }
