--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,28 +1,10 @@
 {
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    // base
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "moduleDetection": "force",
-    "isolatedModules": true,
-
-    // strictness
-    "strict": true,
-
-    // transpilation
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "outDir": "dist/",
-    "rootDir": "src/",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"]
+    "noEmit": true,
+    "checkJs": true,
+    "rootDir": "../../"
   },
-  "include": ["src/*"],
-  "exclude": ["src/*.test.ts"]
+  "include": [".", ".eslintrc.cjs", "../../test/utils.ts"],
+  "exclude": ["dist/", ".turbo/"]
 }
