--- a/packages/docusaurus-theme-search/tsconfig.build.json
+++ b/packages/docusaurus-theme-search/tsconfig.build.json
@@ -1,4 +1,9 @@
 {
+  "include": ["src/"],
+  "references": [
+    { "path": "../core/tsconfig.build.json" },
+    { "path": "../react/tsconfig.build.json" }
+  ],
   "compilerOptions": {
     // base
     "esModuleInterop": true,
@@ -9,7 +14,7 @@
 
     // strictness
     "strict": true,
-    "types": ["@testing-library/jest-dom"],
+    "noUncheckedIndexedAccess": true,
 
     // transpilation
     "module": "nodenext",
@@ -25,9 +30,8 @@
     "verbatimModuleSyntax": true,
 
     // runtime
-    "lib": ["dom", "dom.iterable", "es2023"]
-  },
-  "include": ["src/"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{ "path": "../core/tsconfig.build.json" }]
+    "lib": ["dom", "dom.iterable", "es2023"],
+
+    "types": ["@docusaurus/module-type-aliases"]
+  }
 }
