--- a/packages/docusaurus-theme-search/tsconfig.json
+++ b/packages/docusaurus-theme-search/tsconfig.json
@@ -1,36 +1,10 @@
 {
-  "include": ["src"],
-  "references": [
-    { "path": "../core" },
-    { "path": "../react/tsconfig.build.json" }
-  ],
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    // base
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "moduleDetection": "force",
-    "isolatedModules": true,
-
-    // strictness
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-
-    // transpilation
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "outDir": "dist/",
-    "rootDir": "src/",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"],
-
-    "types": ["@docusaurus/module-type-aliases"]
-  }
+    "noEmit": true,
+    "checkJs": true,
+    "rootDir": "."
+  },
+  "include": [".", ".eslintrc.cjs"],
+  "exclude": ["dist/", ".turbo/"]
 }
