--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,6 +19,7 @@
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.build.json --watch",
     "lint:js": "eslint .",
+    "lint:ts": "tsc -b tsconfig.json",
     "prepack": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
