--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,31 +1,11 @@
 {
-  "include": ["src/"],
-  "references": [{ "path": "../core" }],
+  "extends": "./tsconfig.build.json",
+  "references": [{ "path": "../core/tsconfig.build.json" }],
   "compilerOptions": {
-    // base
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "moduleDetection": "force",
-    "isolatedModules": true,
-
-    // strictness
-    "strict": true,
-    "types": ["@testing-library/jest-dom"],
-
-    // transpilation
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "outDir": "dist/",
-    "rootDir": "src/",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"]
-  }
+    "noEmit": true,
+    "checkJs": true,
+    "rootDir": "."
+  },
+  "include": [".", ".eslintrc.cjs"],
+  "exclude": ["dist/", ".turbo/"]
 }
