--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,42 +1,11 @@
 {
-  "$schema": "http://json.schemastore.org/tsconfig",
-  "references": [
-    { "path": "../core" },
-    { "path": "../react/tsconfig.build.json" }
-  ],
-  "include": ["src/*"],
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    // base
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "moduleDetection": "force",
-    "isolatedModules": true,
-    "allowJs": true,
+    "noEmit": true,
     "checkJs": true,
-
-    // strictness
-    "strict": true,
-
-    // transpilation
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "outDir": "dist/",
-    "rootDir": "src/",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "composite": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"],
-
-    "paths": {
-      "react": ["./node_modules/preact/compat"],
-      "react-dom": ["./node_modules/preact/compat"]
-    }
-  }
+    "rootDir": ".",
+    "emitDeclarationOnly": false
+  },
+  "include": [".", ".eslintrc.cjs"],
+  "exclude": ["dist/", ".turbo/"]
 }
