--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,7 @@
     "lint:js": {},
     "//#lint:md": {},
     "//#lint:ts": {},
+    "lint:ts": {},
     "//#test": {
       "outputs": ["coverage/**"]
     }
