--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "checkJs": true
+    "checkJs": true,
+    "noEmit": true
   },
   "include": [".eslintrc.cjs", "prettier.config.js", "test/"],
   "exclude": ["examples/", "packages/"]
