--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,9 +1,30 @@
 {
-  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "noEmit": true,
+    // base
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "moduleDetection": "force",
+    "isolatedModules": true,
     "checkJs": true,
-    "rootDir": "../../"
+
+    // strictness
+    "strict": true,
+
+    // transpilation
+    "noEmit": true,
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "rootDir": "../../",
+    "outDir": "dist/",
+
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true,
+
+    // runtime
+    "lib": ["dom", "dom.iterable", "es2023"]
   },
   "include": [".", ".eslintrc.cjs", "../../test/utils.ts"],
   "exclude": ["dist/", ".turbo/"]
