--- a/packages/docusaurus-theme-search/tsconfig.build.json
+++ b/packages/docusaurus-theme-search/tsconfig.build.json
@@ -1,37 +1,8 @@
 {
+  "extends": "./tsconfig.json",
   "include": ["src/"],
-  "references": [
-    { "path": "../core/tsconfig.build.json" },
-    { "path": "../react/tsconfig.build.json" }
-  ],
   "compilerOptions": {
-    // base
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "moduleDetection": "force",
-    "isolatedModules": true,
-
-    // strictness
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-
-    // transpilation
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
     "noEmit": false,
-    "outDir": "dist/",
-    "rootDir": "src/",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"],
-
-    "types": ["@docusaurus/module-type-aliases"]
+    "rootDir": "src/"
   }
 }
