--- a/packages/react/tsconfig.build.json
+++ b/packages/react/tsconfig.build.json
@@ -1,31 +1,8 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    // base
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "moduleDetection": "force",
-    "isolatedModules": true,
-
-    // strictness
-    "strict": true,
-    "types": ["@testing-library/jest-dom"],
-
-    // transpilation
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
     "noEmit": false,
-    "outDir": "dist/",
-    "rootDir": "src/",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"]
+    "rootDir": "src/"
   },
   "include": ["src/"],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
