--- a/examples/with-function-calling/package.json
+++ b/examples/with-function-calling/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "lint:js": "eslint .",
+    "lint:ts": "tsc -b tsconfig.json",
     "start": "next start"
   },
   "dependencies": {
