--- a/packages/web/tsconfig.build.json
+++ b/packages/web/tsconfig.build.json
@@ -4,7 +4,7 @@
   "include": ["src/"],
   "compilerOptions": {
     "noEmit": false,
-    "rootDir": "src/",
-    "emitDeclarationOnly": true
+    "rootDir": "src/"
+    // "emitDeclarationOnly": true
   }
 }
