--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -18,7 +18,6 @@
     "noEmit": true,
     "outDir": "dist/",
     "rootDir": ".",
-    "emitDeclarationOnly": false,
 
     "sourceMap": true,
     "declaration": true,
@@ -35,6 +34,10 @@
       "react-dom": ["./node_modules/preact/compat"]
     }
   },
+  "references": [
+    { "path": "../core/tsconfig.build.json" },
+    { "path": "../react/tsconfig.build.json" }
+  ],
   "include": [".", ".eslintrc.cjs"],
   "exclude": ["dist/", ".turbo/"]
 }
