--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,9 @@
     "//#lint:css": {},
     "//#lint:format": {},
     "//#lint:js": {},
-    "lint:js": {},
+    "lint:js": {
+      "dependsOn": ["^build"]
+    },
     "//#lint:md": {},
     "//#lint:ts": {},
     "lint:ts": {},
