--- a/examples/with-next/tsconfig.json
+++ b/examples/with-next/tsconfig.json
@@ -17,5 +17,8 @@
     "strict": true,
     "target": "es2021"
   },
-  "references": [{ "path": "../../packages/react/tsconfig.build.json" }]
+  "references": [
+    { "path": "../../packages/core/tsconfig.build.json" },
+    { "path": "../../packages/react/tsconfig.build.json" }
+  ]
 }
