Update monorepo linting and TS config (#383)
* Lint each package separately

* Restructure tsconfig setup and add clean script

* Flip tsconfigs around

* Fix Next.js linting during build

* Update lockfile

* Update lockfile

* Update example linting and add changeset

* And fix with-function-calling

* Fix @markprompt/web build

* fix lint all

* Alias lodash

* Add changeset

--- a/examples/with-function-calling/tsconfig.json
+++ b/examples/with-function-calling/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".eslintrc.cjs"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "allowJs": true,
@@ -17,5 +17,8 @@
     "strict": true,
     "target": "es2021"
   },
-  "references": [{ "path": "../../packages/react" }]
+  "references": [
+    { "path": "../../packages/core/tsconfig.build.json" },
+    { "path": "../../packages/react/tsconfig.build.json" }
+  ]
 }
