--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,9 +15,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --build",
-    "dev": "tsc --build --watch",
-    "prepack": "tsc --build"
+    "build": "tsc --build tsconfig.build.json",
+    "dev": "tsc --build tsconfig.build.json --watch",
+    "lint:js": "eslint .",
+    "lint:ts": "tsc --build tsconfig.json",
+    "prepack": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
     "@algolia/client-search": "^4.23.3",
