--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,15 +6,18 @@
     "target": "es2022",
     "moduleDetection": "force",
     "isolatedModules": true,
+    "checkJs": true,
 
     // strictness
     "strict": true,
 
     // transpilation
+    "noEmit": true,
     "module": "nodenext",
     "moduleResolution": "nodenext",
+    "rootDir": "../../",
     "outDir": "dist/",
-    "rootDir": "src/",
+
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
@@ -23,6 +26,6 @@
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"]
   },
-  "include": ["src/*"],
-  "exclude": ["src/*.test.ts"]
+  "include": [".", ".eslintrc.cjs", "../../test/utils.ts"],
+  "exclude": ["dist/", ".turbo/"]
 }
