--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "include": ["src/"],
-  "references": [{ "path": "../core" }],
   "compilerOptions": {
     // base
     "esModuleInterop": true,
@@ -8,6 +6,7 @@
     "target": "es2022",
     "moduleDetection": "force",
     "isolatedModules": true,
+    "checkJs": true,
 
     // strictness
     "strict": true,
@@ -16,8 +15,10 @@
     // transpilation
     "module": "nodenext",
     "moduleResolution": "nodenext",
+    "noEmit": true,
     "outDir": "dist/",
-    "rootDir": "src/",
+    "rootDir": ".",
+
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
@@ -27,5 +28,8 @@
 
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"]
-  }
+  },
+  "references": [{ "path": "../core/tsconfig.build.json" }],
+  "include": [".", ".eslintrc.cjs"],
+  "exclude": ["dist/", ".turbo/"]
 }
